# grpc-playground

./: .gitignore  README.md
.kiro/specs/grpc-bidirectional-streaming/: design.md  requirements.md  tasks.md
cpp/: CMakeLists.txt  test_logging.cpp
cpp/client/: CMakeLists.txt  ads_client.cpp  ads_client.h  main.cpp
cpp/common/: logging.h
cpp/server/: CMakeLists.txt  ad_generator.cpp  ad_generator.h  ads_service_impl.cpp  ads_service_impl.h  main.cpp
docs/: interoperability-testing.md  logging-specification.md  spec.md  troubleshooting-guide.md
java/: pom.xml
java/src/main/java/com/example/ads/client/: AdsClient.java
java/src/main/java/com/example/ads/common/: LoggingConfig.java
java/src/main/java/com/example/ads/server/: AdGenerator.java  AdsServer.java  AdsServiceImpl.java
proto/: ads.proto
rust/: Cargo.toml  build.rs.template
rust/client/: Cargo.toml  build.rs
rust/client/src/: main.rs
rust/server/: Cargo.toml
rust/server/src/: main.rs
scripts/: README.md  build-all.sh  build-cpp.sh  build-java.sh  build-rust.sh  common.sh  generate-proto.sh  run-client.sh  run-server.sh  test-comprehensive.sh  test-error-handling.sh  test-framework.sh  test-interop.sh  test-logging.sh  test-runner.sh  verify-generation.sh
