[package]
name = "ads-server"
version = "0.1.0"
edition = "2021"

[dependencies]
tonic.workspace = true
prost.workspace = true
tokio = { workspace = true, features = ["time"] }
tokio-stream = "0.1"
futures-core = "0.3"
rand = "0.8"
tracing = "0.1"
tracing-subscriber = "0.3"

[build-dependencies]
tonic-build.workspace = true
